--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
@@ -36,8 +36,8 @@ $productListItemViewModel = $viewModels->require(ProductListItem::class);
 
 if ($product) {
     $price = $product->getPrice();
-    if ($price) {
-        $finalPrice = $product->getData('final_price');
+    $finalPrice = $product->getData('final_price');
+    if ($price && $finalPrice) {
         $difference = $price - $finalPrice;
         $discountPercentage = round(($difference * 100.0) / $price);
     }
@@ -109,7 +109,7 @@ if ($product) {
                                 class="mix-blend-darken object-center max-h-full md:group-hover:scale-105 <?= $isContain ? 'object-contain rounded-md p-[2%]' : 'object-cover h-full w-full' ?>"
                                 src="<?= $escaper->escapeUrl($imageUrl) ?>"
                                 alt="<?= $escaper->escapeHtmlAttr($product->getName()) ?>" loading="lazy">
-                            <?php if ($discountPercentage) : ?>
+                            <?php if (isset($discountPercentage) && $discountPercentage > 0) : ?>
                                 <div class="absolute bottom-4 left-0 rounded-full">
                             <span class="card-product__badge bg-white px-3 py-2 text-sm font-bold rounded-r-full">
                                 -<?php echo $discountPercentage; ?>% OFF
