--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/view.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/view.phtml
@@ -6,6 +6,7 @@ use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\HeroiconsOutline;
 use Magento\Framework\Escaper;
 use Magento\LayeredNavigation\Block\Navigation;
+use Hyva\Theme\ViewModel\SvgIcons;
 
 // phpcs:disable Generic.Files.LineLength.TooLong
 
@@ -14,6 +15,9 @@ use Magento\LayeredNavigation\Block\Navigation;
 /** @var ViewModelRegistry $viewModels */
 
 /** @var HeroiconsOutline $heroicons */
+
+/** @var SvgIcons $hyvaicons */
+$hyvaicons = $viewModels->require(SvgIcons::class);
 $heroicons = $viewModels->require(HeroiconsOutline::class);
 ?>
 <?php if ($block->canShowBlock()): ?>
@@ -77,49 +81,38 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                 <?php foreach ($block->getFilters() as $filter): ?>
                     <?php if ($filter->getItemsCount()): ?>
                         <div
-                            x-data="{
-                            open: false,
-                            id: $id('filter-option')
-                        }"
-                            x-defer="intersect"
-                            class="filter-option card my-4"
+                            class="flex-1 md:border-t md:border-bg-600 md:py-5"
+                            x-data="Accordion(true, 300)"
                         >
-                            <h3 :id="`${id}-title`">
-                                <button
-                                    type="button"
-                                    @click="open = !open"
-                                    class="filter-options-title flex justify-between items-center cursor-pointer text-start hover:text-secondary-darker border-container w-full"
-                                    :class="{ 'border-b pb-4': open }"
-                                    :aria-controls="`${id}-content`"
-                                    :aria-expanded="open"
-                                >
-                                <span class="title text-md md:text-lg font-semibold">
+                            <div
+                                class="group hidden h-11 w-full cursor-pointer items-center rounded-md py-3 md:flex md:px-2"
+                                x-ref="AccordionButton"
+                            >
+                                <h2 class="grow text-left text-text-500">
                                     <?= $escaper->escapeHtml(__($filter->getName())) ?>
-                                    <span class="sr-only"> <?= $escaper->escapeHtml(__('filter')) ?></span>
-                                </span>
-                                    <span class="py-1 px-1 rounded border border-container">
-                                    <?= $heroicons->chevronDownHtml(
-                                        'transition-transform transform duration-300 ease-in-out',
-                                        24,
-                                        24,
-                                        [
-                                            ":class" => "{ 'rotate-180': open }",
-                                            "aria-hidden" => "true",
-                                            "focusable" => "false"
-                                        ]
-                                    ); ?>
-                                </span>
+                                    <span class="sr-only">
+                                        <?= $escaper->escapeHtml(__('filter')) ?>
+                                    </span>
+                                </h2>
+                                <button
+                                    class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable"
+                                    aria-label="<?=__('Sort by')?>">
+                                        <span style="rotate: -180deg;" x-ref="AccordionIcon">
+                                            <?= $hyvaicons->renderHtml('chevron-up'); ?>
+                                        </span>
                                 </button>
-                            </h3>
-                            <template x-if="open">
-                                <div
-                                    :id="`${id}-content`"
-                                    class="filter-options-content pt-3"
-                                >
-                                    <?= /* @noEscape */
-                                    $block->getChildBlock('renderer')->setFilterTitle($filter->getName())->render($filter); ?>
-                                </div>
-                            </template>
+                            </div>
+                            <div
+                                x-cloak x-ref="AccordionPanel" class="overflow-hidden md:px-2"
+                                :class="{
+                                    'transition-none': $store.main.isReducedMotion,
+                                    'transition': $store.main.isReducedMotion
+                                }"
+                                :id="`${id}-content`"
+                            >
+                                <?= /* @noEscape */
+                                $block->getChildBlock('renderer')->setFilterTitle($filter->getName())->render($filter); ?>
+                            </div>
                         </div>
                     <?php endif; ?>
                 <?php endforeach; ?>
