--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
@@ -21,28 +21,40 @@ $catalogHelper = $this->helper(Data::class);
 
 <ol class="items" aria-label="<?= $escaper->escapeHtmlAttr(__('%1 filter options', $block->getFilterTitle())) ?>">
     <?php foreach ($filterItems as $filterItem): ?>
-        <li>
+        <li x-data="{
+            fetchPage(queryString) {
+                this._fetchPage(queryString);
+                window.scrollTo({
+                        top: 0,
+                        behavior: 'smooth'
+                    });
+                }
+            }"
+        >
             <?php if ($filterItem->getCount() > 0): ?>
-                <a
-                    href="<?= $escaper->escapeUrl($filterItem->getUrl()) ?>"
-                    class="flex justify-between py-1 hover:text-black"
-                    <?php if ((int) $filterItem->getCount() === 1): ?>
-                        aria-label="<?= $escaper->escapeHtmlAttr(__('%1 filter, 1 available product', strip_tags((string)$filterItem->getLabel()))) ?>"
-                    <?php else: ?>
-                        aria-label="<?= $escaper->escapeHtmlAttr(__('%1 filter, %2 available products', strip_tags((string)$filterItem->getLabel()), $filterItem->getCount())) ?>"
-                    <?php endif; ?>
-                >
-                    <span><?= /* @noEscape */ $filterItem->getLabel() ?></span>
+                <button @click="fetchPage('<?= $escaper->escapeUrl($filterItem->getUrl()) ?>')"
+                        class="radio mb-0 h-full w-full py-3"">
+                    <span class="radio__control " aria-hidden="true"></span>
+                    <span class="radio__label text-md ">
+                        <?= /* @noEscape */
+                        $filterItem->getLabel() ?>
+                    </span>
+                    &nbsp;
                     <?php if ($catalogHelper->shouldDisplayProductCountOnLayer()): ?>
-                        <span class="count text-primary">(<?= /* @noEscape */ $localeFormatter->formatNumber((int)$filterItem->getCount()) ?>)</span>
+                        <span class="count text-primary">(<?= /* @noEscape */
+                            $localeFormatter->formatNumber((int)$filterItem->getCount()) ?>)</span>
                     <?php endif; ?>
-                </a>
+                </button>
             <?php else: ?>
                 <span class="flex justify-between py-1 hover:text-black">
-                    <span><?= /* @noEscape */ $filterItem->getLabel() ?></span>
-                <?php if ($catalogHelper->shouldDisplayProductCountOnLayer()): ?>
-                    <span class="count text-primary">(<?= /* @noEscape */ $localeFormatter->formatNumber((int)$filterItem->getCount()) ?>)</span>
-                <?php endif; ?>
+                    <span><?= /* @noEscape */
+                        $filterItem->getLabel() ?>
+                    </span>
+
+                    <?php if ($catalogHelper->shouldDisplayProductCountOnLayer()): ?>
+                        <span class="count text-primary">(<?= /* @noEscape */
+                            $localeFormatter->formatNumber((int)$filterItem->getCount()) ?>)</span>
+                    <?php endif; ?>
             </span>
             <?php endif; ?>
         </li>
